# ifcbook

./: .gitignore  LICENSE  NEXT_FEATURE_PLAN.md  PHASE3A_VALIDATION.md  PROJECT_STATUS.md  README.md  ifc_to_drawing_book_research.md  pyproject.toml
.github/workflows/: determinism.yml
ifc_book_prototype/: __init__.py  _ifc_index.py  benchmark.py  bundle_replay.py  cli.py  domain.py  elevation_backend.py  feature_anchors.py  geometry_backend.py  geometry_metrics.py  geometry_occt.py  geometry_projection.py  ifc_loader.py  occt_section.py  pipeline.py  profiles.py  progress_plan.py  render_pdf.py  render_svg.py  runtime_gate.py  schedules.py  ui.py
ifc_book_prototype/profiles/: din_iso_arch_floor_plan_v1.json  din_iso_arch_floor_plan_v1_office_overlay_demo.json  din_iso_arch_floor_plan_v2_phase3b.json  din_iso_arch_floor_plan_v3_phase3c_owned_projection.json  din_iso_arch_floor_plan_v3_phase3c_owned_projection_hidden.json  (+1 more)
samples/: README.md
scripts/: run_occt_validation.sh
tests/: conftest.py  test_benchmark.py  test_bundle_replay_overlay.py  test_cli_run_pipeline_job.py  test_determinism.py  test_elevation_views.py  test_feature_anchors.py  test_feature_annotations.py  test_geometry_composite.py  test_geometry_metrics.py  test_ifc_index.py  test_occt_fallback_report.py  test_occt_section.py  test_phase3b_cut_classes.py  test_phase3c_owned_projection.py  test_phase3c_visual_regression.py  test_pipeline_feature_anchors.py  test_progress_plan.py  test_quantize_and_sort.py  test_runtime_gate.py  test_typed_line_renderer.py  test_typed_line_snapshots.py  test_ui.py
