[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ifc-book-prototype"
version = "0.1.0"
description = "Prototype pipeline for IFC to architectural drawing book generation."
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
ifc = ["ifcopenshell>=0.8.0"]
dev = ["pytest>=8"]
occt = ["pythonocc-core==7.8.1.1"]

[tool.pytest.ini_options]
markers = [
    "slow: long-running tests excluded from default PR gate",
    "occt: requires pythonocc-core (Phase 2 OCCT backend)",
]

[project.scripts]
ifc-book-prototype = "ifc_book_prototype.cli:main"
ifc-book-prototype-ui = "ifc_book_prototype.ui:main"
ifc-book-benchmark = "ifc_book_prototype.benchmark:main"

[tool.setuptools]
include-package-data = true
